--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "release-major",
   "private": true,
-  "version": "22.09.0-beta.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
